# aptos-contracts-annotated

./: .gitignore  README.md  pyproject.toml
01-useless/: Move.toml  README.md
01-useless/sources/: Useless.move
02-moocoin/: Move.toml  README.md  ctl.py
02-moocoin/sources/: MooCoin.move
03-init-bug/: Move.toml  README.md
03-init-bug/sources/: InitBug.move
04-time-vault/: Move.toml  README.md
04-time-vault/sources/: TimeVault.move
05-proving/: Move.toml  README.md
05-proving/sources/: Counter.move
06-tables/: Move.toml  README.md
06-tables/sources/: Donation.move
